# vacancy-aggregator

./: README.md  docker-compose.yml
.github/workflows/: backend.yml  ci.yml  frontend.yml
backend/: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 000a6280b81d_update_source_name_length.py  1a87a1170348_init.py  3358df6bb8b9_init.py  6ecb1e2c215d_update_user_profile.py  73e974d79f0e_init.py  a1ce177b7596_init.py  ae483085bb9e_init.py
backend/app/: __init__.py  main.py
backend/app/api/v1/: models.py  router.py
backend/app/core/: config.py
backend/app/database/: crud.py  database.py  models.py
backend/app/services/: jwt.py  security.py
backend/app/services/datasources/: HHru.py  HHru_resume.py  SuperJob.py  __init__.py  base.py
backend/app/services/datasources/rabotaru/: __init__.py  _api.py  catalog.json  parser.py  scraper.py  specializations.py  traverser.py
backend/app/tasks/: parsing.py
backend/docs/: openapi.json
frontend/: .dockerignore  Dockerfile  README.md  nginx.conf  package.json  tsconfig.json  vite.config.ts
frontend/nginx/: entrypoint.sh  nginx.conf.template
frontend/src/: App.tsx  main.tsx
frontend/src/api/: index.ts  resume.ts  tokens.ts  vacancies.ts
frontend/src/components/cards/: ResumeCard.tsx  VacancyCard.tsx
frontend/src/config/: router.tsx
frontend/src/hooks/: useUserInfo.ts
frontend/src/lib/: utils.ts
frontend/src/schemas/: login.ts  register.ts  settings.ts
frontend/src/styles/: index.css  sidebar.css
frontend/src/types/: filters.ts
nginx/: Dockerfile  nginx.conf  nginx.conf.template
(+44 files in other folders)
