[project]
name = "vacancy-aggregator-backend"
version = "0.1.0"
description = "Backend application for vacancy-aggregator"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "alembic>=1.16.1",
    "asyncpg>=0.30.0",
    "fastapi>=0.115.12",
    "passlib[bcrypt]>=1.7.4",
    "pydantic>=2.11.5",
    "pydantic-settings>=2.9.1",
    "python-jose>=3.5.0",
    "sqlalchemy[asyncio]>=2.0.41",
    "uvicorn>=0.34.3",
    "requests>=2.31.0",
    "beautifulsoup4>=4.12",
    "lxml",
    "aiohttp>=3.12.13",
    "pillow>=11.3.0",
    "python-multipart>=0.0.20",
    "apscheduler>=3.11.0",
    "backoff>=2.2.1",
]

[dependency-groups]
dev = ["bandit>=1.8.3", "flake8>=7.2.0", "pydocstyle>=6.3.0", "pytest>=8.3.5"]
